--- a/client/src/index.css
+++ b/client/src/index.css
@@ -47,3 +47,21 @@ ul {
 .active-nav {
   color: teal;
 }
+
+/* ********** LANDING ************** */
+.landing-container {
+  display: flex;
+  flex-direction: column;
+}
+
+/* ********** CAROUSEL ************** */
+.carousel-container {
+  width: 100%;
+  height: 50vh;
+  background-color: grey;
+}
+
+/* ********** PROFILE ************** */
+.profile-container {
+  display: flex;
+}
