--- a/client/src/index.css
+++ b/client/src/index.css
@@ -48,6 +48,53 @@ ul {
   color: teal;
 }
 
+/* ********** MODALS ************** */
+.Modal {
+  width: 50vw;
+  height: 50vh;
+  margin: 5em auto;
+  background-color: rgba(0,0,0);
+}
+
+.sign-in-content {
+  color: white;
+  background-color: inherit;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 0 auto;
+}
+
+.sign-in-form {
+  display: flex;
+  flex-direction: column;
+}
+
+.sign-in-form input{
+  font-size: 1.1em;
+  width: 20rem;
+  margin: .5em auto;
+}
+
+::placeholder {
+  padding-left: .5em;
+}
+
+.login-button {
+  width: 10rem;
+  margin: .5em auto;
+}
+
+.login-button:hover {
+  background-color: black;
+  color: white;
+  cursor: pointer;
+}
+
+.close-modal {
+  /* align-self:  */
+}
+
 /* ********** LANDING ************** */
 .landing-container {
   display: flex;
