--- a/client/src/index.css
+++ b/client/src/index.css
@@ -107,8 +107,26 @@ ul {
 /* ********** CAROUSEL ************** */
 .carousel-container {
   width: 100%;
-  height: 30vh;
+  height: 60vh;
   background-color: grey;
+}
+
+.carousel {
+  max-height: 80vh;
+}
+
+.carousel img {
+  max-width: 100vw !important;
+  max-height: 50%;
+}
+
+.large-pic {
+  max-width: 100vw;
+  max-height: 30vh;
+}
+
+.slick-arrow {
+  color: white !important;
 }
 
 /* ********** PROFILE ************** */
@@ -157,3 +175,18 @@ ul {
   margin-bottom: 1em;
 }
 
+/* ********** HOMEPAGE ************** */
+.homepage {
+  display: flex;
+  margin-top: 1em;
+}
+
+
+/* ********** CITIES LIST ************** */
+.city-list-container {
+  border: 1px solid black;
+  height: 90vh;
+}
+
+
+/* ********** HOMEPAGE ************** */
