--- a/client/src/index.css
+++ b/client/src/index.css
@@ -185,8 +185,49 @@ ul {
 /* ********** CITIES LIST ************** */
 .city-list-container {
   border: 1px solid black;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 0 auto;
   height: 90vh;
+  width: 37%;
 }
 
+.city-list-container h1 {
+  margin-top: 1em;
+}
 
-/* ********** HOMEPAGE ************** */
+.city-list {
+  display: flex;
+  flex-direction: column;
+  margin: auto;
+}
+
+.city-list-item {
+  max-width: 95%;
+  border: 1px solid black;
+  padding: 1em;
+  margin: .6em auto;
+}
+
+.city-list-item h2 {
+  display: inline-block;
+  padding-left: .5em;
+}
+
+.city-list-item img {
+  max-height: 50%;
+  max-width: 48%;
+  border-radius: 5%;
+}
+
+.city-list-active {
+  background-color: red;
+}
+
+/* ********** CITY VIEW ************** */
+.city-container {
+  width: 60%;
+  border: 1px solid black;
+  margin: 0 auto;
+}
