--- a/client/src/index.css
+++ b/client/src/index.css
@@ -101,30 +101,10 @@ ul {
 }
 
 /* ********** CAROUSEL ************** */
-.carousel-container {
-  width: 100%;
-  height: 60vh;
-  background-color: grey;
-}
-
 .carousel {
-  max-height: 80vh;
+  height: 80vh;
+  width: 100vw;
 }
-
-.carousel img {
-  max-width: 100vw !important;
-  max-height: 50%;
-}
-
-.large-pic {
-  max-width: 100vw;
-  max-height: 30vh;
-}
-
-.slick-arrow {
-  color: white !important;
-}
-
 /* ********** PROFILE ************** */
 .profile-container {
   display: flex;
