--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,9 +1,11 @@
-@import url("https://fonts.googleapis.com/css?family=Fira+Sans");
+@import url('https://fonts.googleapis.com/css?family=Montserrat:400,600');
+
 
 body {
   margin: 0;
   padding: 0;
-  font-family: "Fira Sans", sans-serif;
+  font-family: "Montserrat", sans-serif;
+  background-color: rgb(232, 242, 248);
 }
 
 ul {
@@ -147,8 +149,8 @@ ul {
 
 /* ********** CAROUSEL ************** */
 .carousel {
-  height: 80vh;
-  width: 90vw;
+  height: 70vh;
+  width: 100vw;
   margin: 0 auto;
 }
 
@@ -232,17 +234,16 @@ ul {
 
 /* ********** CITIES LIST ************** */
 .city-list-container {
-  border: 1px solid black;
   display: flex;
   flex-direction: column;
   align-items: center;
   margin: 0 auto;
   height: 88vh;
-  width: 37%;
+  width: 28%;
 }
 
 .city-list-container h1 {
- font-size: 2.5em
+ font-size: 2em
 }
 
 .city-list {
@@ -253,8 +254,7 @@ ul {
 }
 
 .city-list-item {
-  max-width: 93%;
-  border: 1px solid black;
+  max-width: 85%;
   padding: 1em;
   margin: 0.6em auto;
   cursor: pointer;
@@ -277,24 +277,28 @@ ul {
 
 /* ********** CITY VIEW ************** */
 .city-container {
-  width: 60%;
-  border: 1px solid black;
+  background-image: url("./images/Sydney.png");
+  background-repeat: no-repeat;
+  width: 68%;
   margin: 0 auto;
+  border-radius: 1.5%;
 }
 
 .city-country-title {
   display: flex;
+  /* text-align: left; */
   margin: 1em auto;
   padding-bottom: 1em;
 }
 
 .city-country-name {
-  width: 30%;
+  width: 90%;
+  color: white;
   margin: 0 auto;
 }
 
 .city-country-name h1 {
-  font-size: 3em;
+  font-size: 4em;
 }
 
 .city-country-name h3 {
@@ -314,9 +318,13 @@ ul {
 
 /* ********** POST CONTAINER ************** */
 .post-container {
-  border: 1px solid black;
+  background: rgba(255, 255, 255, 0.733);
   display: flex;
   flex-direction: column;
+}
+
+.post-container h1 {
+  font-size: 2em;
 }
 
 .post-list-header {
@@ -331,16 +339,19 @@ ul {
 
 /* ********** POST LIST ************** */
 .post-list {
-  border: 1px solid green;
   max-height: 48vh;
   overflow-y: scroll;
 }
 
 /* ********** POST ************** */
 .post {
-  border: 1px solid red;
+  border: 1px solid black;
   max-width: 90%;
   margin: .5em auto;
+}
+
+.post h1 {
+  font-size: 1.5em;
 }
 
 .body-p a {
@@ -358,11 +369,6 @@ ul {
 
 .morecontent span {
 	display: none;
-}
-
-.body-p {
-
-	margin: 10px;
 }
 
 /* ********** POST MODAL ************** */
