--- a/client/src/index.css
+++ b/client/src/index.css
@@ -6,6 +6,7 @@ body {
   padding: 0;
   font-family: "Montserrat", sans-serif;
   background-color: rgb(232, 242, 248);
+  color: navy;
 }
 
 ul {
@@ -28,7 +29,7 @@ ul {
 }
 
 .navbar-title:hover {
-  color: lightblue;
+  color: rgb(240, 196, 116);
   text-decoration: none;
 }
 
@@ -53,7 +54,7 @@ ul {
 }
 
 .nav-button:hover {
-  border-bottom: 1px solid navy;
+  border-bottom: 1px solid rgb(240, 196, 116);
 }
 
 .nav-item,
@@ -65,19 +66,21 @@ ul {
 .nav-item:hover,
 .nav-logout:hover {
   text-decoration: none;
-  border-bottom: 1px solid navy;
+  color: rgb(240, 196, 116);
+  border-bottom: 1px solid rgb(240, 196, 116);
 }
 
 .active-nav {
-  color: teal;
+  color: rgb(240, 196, 116);
 }
 
 /* ********** MODALS ************** */
 .Modal.signup {
   width: 30vw;
-  height: 45vh;
+  height: 46vh;
   margin: 10rem auto;
-  background-color: rgb(2, 14, 68);
+  color: white;
+  background-color: rgb(232, 242, 248);
 }
 
 .Modal.signin {
@@ -85,16 +88,18 @@ ul {
   height: 31vh;
   margin: 10rem auto;
   padding: 1em;
-  background-color: rgb(2, 14, 68);
+  background-color: rgb(232, 242, 248);
+  border-radius: 5%;
 }
 
 .modal-content {
-  color: white;
+  color: navy;
   background-color: inherit;
   display: flex;
   flex-direction: column;
   align-items: center;
   margin: 0 auto;
+  border: none;
 }
 
 .modal-form {
@@ -103,19 +108,48 @@ ul {
 }
 
 .modal-form input {
-  font-size: 1.1em;
-  width: 20rem;
+  font-size: 1em;
+  width: 18rem;
   margin: 0.5em auto;
+  border: 1px solid navy;
+  border-radius: 5%;
+  padding-left: .5em;
+}
+
+.signup h1 {
+  margin-top: .5em;
+}
+
+.login-button {
+  border: 1px solid navy;
+  background: transparent;
+}
+
+.login-button:hover {
+  color: white;
+  background: navy;
 }
 
 .close-signup {
   position: relative;
   bottom: -.7rem;
+  border: 1px solid navy;
+  background: transparent;
+  cursor: pointer
 }
 
 .close-signin {
   position: relative;
   bottom: -.6rem;
+  border: 1px solid navy;
+  background: transparent;
+  cursor: pointer
+}
+
+.close-signup:hover,
+.close-signin:hover {
+  color: white;
+  background: navy;
 }
 
 ::placeholder {
@@ -149,17 +183,20 @@ ul {
 
 /* ********** CAROUSEL ************** */
 .carousel {
-  height: 70vh;
+  height: 80vh;
   width: 100vw;
   margin: 0 auto;
 }
 
 .carousel-city-name {
   z-index: 10;
-  color: rgb(136, 135, 135);
+  color: white;
   font-size: 1.5em;
-  padding: .5em 0 0 .5em;
+  padding: .5em 0 0 1em;
+  position: relative;
+  top: 92%;
   text-align: left;
+  text-emphasis-style: ita
 }
 
 .carousel-arrow {
@@ -237,7 +274,7 @@ ul {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin: 0 auto;
+  margin: 0 0 0 auto;
   height: 88vh;
   width: 28%;
 }
@@ -254,40 +291,49 @@ ul {
 }
 
 .city-list-item {
-  max-width: 85%;
+  max-width: 100%;
   padding: 1em;
   margin: 0.6em auto;
   cursor: pointer;
+  border-radius: 5%;
 }
 
 .city-list-item h2 {
   display: inline-block;
-  padding-left: 0.5em;
+  padding-left: 1.5em;
+  font-size: 1.4em;
 }
 
 .city-list-item img {
   max-height: 50%;
   max-width: 45%;
   border-radius: 5%;
+  margin-left: 1em;
 }
 
 .city-list-active {
-  background-color: teal;
+  background-color: rgb(240, 196, 116);
 }
 
 /* ********** CITY VIEW ************** */
 .city-container {
-  background-image: url("./images/Sydney.png");
+  background-image: url("./images/SanFrancisco.png");
   background-repeat: no-repeat;
+  /* dont use center for dubai or london */
+  background-position: center;
   width: 68%;
-  margin: 0 auto;
+  margin: 0 auto 0;
   border-radius: 1.5%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .city-country-title {
   display: flex;
+  width: 100%;
   /* text-align: left; */
-  margin: 1em auto;
+  margin: 3em auto 0;
   padding-bottom: 1em;
 }
 
@@ -325,6 +371,7 @@ ul {
 
 .post-container h1 {
   font-size: 2em;
+  margin: 1em;
 }
 
 .post-list-header {
@@ -334,7 +381,19 @@ ul {
 }
 
 .add-post {
-  border: 1px solid black;
+  margin: 2em;
+  background: transparent;
+  padding: .5em;
+  border: 1px solid rgba(109, 109, 109, 0.473);
+  border-radius: 6.5%;
+  width: 6rem;
+  height: 3em;
+  cursor: pointer;
+}
+
+.add-post:hover {
+  background-color: navy;
+  color: white;
 }
 
 /* ********** POST LIST ************** */
@@ -345,13 +404,18 @@ ul {
 
 /* ********** POST ************** */
 .post {
-  border: 1px solid black;
+  border: 1px solid rgba(109, 109, 109, 0.473);
+  border-radius: 10px;
   max-width: 90%;
   margin: .5em auto;
 }
 
 .post h1 {
   font-size: 1.5em;
+}
+
+.post p {
+  margin-left: 2.5em;
 }
 
 .body-p a {
@@ -377,7 +441,8 @@ ul {
   height: 32vh;
   margin: 10rem auto;
   padding: 1em;
-  background-color: rgb(2, 14, 68);
+  background-color: rgb(232, 242, 248);
+  border-radius: 5%;
 }
 
 .new-post-text {
@@ -405,4 +470,9 @@ ul {
 
 .edit-post-submit {
   max-width: 50%;
+}
+
+/* ********** POST FORM ************** */
+.post-detail {
+  background: rgba(255, 255, 255, 0.733);
 }
