--- a/client/src/index.css
+++ b/client/src/index.css
@@ -281,7 +281,7 @@ ul {
 }
 
 .city-list-container h1 {
- font-size: 2em
+ font-size: 1.8em
 }
 
 .city-list {
@@ -360,7 +360,7 @@ ul {
 
 /* ********** POST CONTAINER ************** */
 .post-container {
-  background: rgba(255, 255, 255, 0.774);
+  background: rgba(255, 255, 255, 0.863);
   display: flex;
   flex-direction: column;
 }
@@ -415,11 +415,11 @@ ul {
 }
 
 .body-p a {
-	color: #0254EB
+	color: rgb(189, 140, 4)
 }
 
 .body-p a:visited {
-	color: #0254EB
+	color: rgb(189, 140, 4)
 }
 
 .body-p a.morelink {
@@ -429,6 +429,11 @@ ul {
 
 .morecontent span {
 	display: none;
+}
+
+.post-option:hover {
+  color: rgb(189, 140, 4);
+  cursor: pointer;
 }
 
 /* ********** POST MODAL ************** */
@@ -484,7 +489,9 @@ ul {
 }
 
 .post-form textarea {
-  width: 30rem;
+  width: 70%;
+  height: 10rem;
+  border-radius: 5px;
 }
 
 .edit-post-submit,
@@ -524,4 +531,27 @@ ul {
 /* ********** POST FORM ************** */
 .post-detail {
   background: rgba(255, 255, 255, 0.733);
+  min-height: 40vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.post-detail h3 {
+  margin: 1em auto;
+}
+
+.post-detail p {
+  max-width: 90%;
+  font-size: 1.1em;
+  margin: .5em auto;
+}
+
+.exit-detail-page {
+  cursor: pointer;
+}
+
+.exit-detail-page:hover {
+  color: rgb(189, 140, 4);
 }
