updated profile styling

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -204,6 +204,7 @@ ul {
   font-size: 2.5em;
   color: white;
   cursor: pointer;
+  width: 20px;
 }
 
 .left.carousel-arrow {
@@ -221,8 +222,10 @@ ul {
 /* ********** PROFILE ************** */
 .profile-container {
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  flex-direction: row;
+  /* align-items: center; */
+
+  min-height: 25vh;
 }
 
 .profile-title {
@@ -232,13 +235,18 @@ ul {
 
 .profile-edit {
   font-size: 0.3em;
-  padding-left: 1em;
+  padding: 1em 1em;
   cursor: pointer;
+  text-align: center;
+}
+
+.profile-edit:hover {
+  color: rgb(189, 140, 4);
 }
 
 .profile-info {
   text-align: left;
-  margin: 0 auto;
+  margin: 1.5em auto;
 }
 
 .profile-info p {
@@ -246,22 +254,39 @@ ul {
 }
 
 .profile-posts {
+  margin: 1.5em auto;
+}
+
+.profile-posts-lists {
   padding: 0;
 }
 
 .profile-form {
   display: flex;
   flex-direction: column;
+  min-height: 30vh;
+  margin: 2em auto;
 }
 
 .profile-form input {
-  font-size: 1.1em;
-  width: 20rem;
-  margin: 0.5em auto;
+  font-size: 1em;
+  width: 18rem;
+  margin: 1em auto;
+  border: 1px solid navy;
+  border-radius: 5%;
+  padding-left: .5em;
 }
 
 .profile-form button {
-  margin-bottom: 1em;
+  margin: 1em auto 0;
+  border: 1px solid navy;
+  background: transparent;
+}
+
+.profile-form button:hover {
+  color: white;
+  background: navy;
+  cursor: pointer;
 }
 
 /* ********** HOMEPAGE ************** */
