--- a/client/src/index.css
+++ b/client/src/index.css
@@ -12,6 +12,13 @@ ul {
   list-style: none;
 }
 
+input:focus,
+select:focus,
+textarea:focus,
+button:focus {
+    outline: none;
+}
+
 /* ********** NAVBAR ************** */
 
 .navbar {
@@ -83,6 +90,7 @@ ul {
   margin: 10rem auto;
   color: white;
   background-color: rgb(232, 242, 248);
+  border-radius: 5%;
 }
 
 .Modal.signin {
@@ -182,6 +190,10 @@ ul {
   padding-top: .3em;
   letter-spacing: 5px;
   color: navy
+}
+
+.orange {
+  color: rgb(240, 196, 116)
 }
 
 /* ********** CAROUSEL ************** */
@@ -439,7 +451,7 @@ ul {
 }
 
 .post p {
-  margin-left: 2.5em;
+  margin: 1em 2.5em;
 }
 
 .body-p a {
@@ -586,4 +598,39 @@ ul {
 
 .exit-detail-page:hover {
   color: rgb(189, 140, 4);
+}
+
+/* ********** MEDIA QUERIES ************** */
+@media only screen and (max-width: 1446px) {
+  .city-list-item {
+    max-width: 90%;
+    text-align: center;
+  }
+
+  .city-list-item img {
+    margin: 0;
+    max-height: 60%;
+    max-width: 55%;
+  }
+
+  .city-list-item h2 {
+    display: block;
+    font-size: 1.8em;
+    margin: .5em 0;
+    padding: 0;
+  }
+}
+
+@media only screen and (max-width: 870px) {
+  .city-list-item h2 {
+    font-size: 1.2em;
+  }
+
+  .city-country-name h1 {
+    font-size: 3em;
+  }
+
+  .city-country-name h3 {
+    font-size: 2em;
+  }
 }
